--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <img src="image/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Jejeram Bandagar</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/saurabh-gawali-2586961ba/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/jejeram-bandagar-40b9bb25a" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://www.facebook.com/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/jay__bandgar/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://twitter.com/Saurabhg__007" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://github.com/saurabhg007" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://twitter.com" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://github.com/Jejeram" class="github"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
