--- a/index.html
+++ b/index.html
@@ -349,19 +349,19 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Gov Colony, Bandra(E), Mumbai, India,400051</p>
+                <p>newalewasti sane chowk chikli road </p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>gawalisaurabh007@gmail.com</p>
+                <p>jaybandgar143@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+91 9011901240</p>
+                <p>+91 7709507393</p>
               </div>
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15084.255684046362!2d72.8377759697754!3d19.06092700000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f131!3m3!1m2!1s0x3be7c8e114fa5045%3A0xab01b3ce8aa92ac7!2sBandra%20East%2C%20Mumbai%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1686218223512!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
@@ -409,7 +409,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Project</span></strong>
+        &copy; Copyright <strong><span>Portpolio</span></strong>
       </div>
       <div class="credits">
         Designed by <a href="#">Jejeram Bandgar</a>
