--- a/index.html
+++ b/index.html
@@ -196,19 +196,19 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="resume-title"> Certifications </h3>
               <div class="resume-item">
-                <h4 style="text-transform:capitalize ; "><a href="https://drive.google.com/file/d/12SGkHTZOn5EVoATUNxpcECsoTntUXrEr/view?usp=sharing">Database Management System Certification by NPTEL</a></h4>
+                <h4 style="text-transform:capitalize ; "><a href="https://drive.google.com/file/d/1WTlCD0ToH8BAg3jYLqiRnVhaAQvV1513/view?usp=drivesdk">Database Management System Certification by NPTEL</a></h4>
               </div>
               <div class="resume-item">
-                <h4 style="text-transform:capitalize ;"><a href="https://drive.google.com/file/d/1bUlyhJ_GlDFyqSIo5vbznAyR1SBfwth4/view?usp=share_link">Front End Development – CSS Certification by Great Learning.</a> </h4>
+                <h4 style="text-transform:capitalize ;"><a href="https://drive.google.com/file/d/1WTlCD0ToH8BAg3jYLqiRnVhaAQvV1513/view?usp=drivesdk">Front End Development – CSS Certification by Great Learning.</a> </h4>
               </div>
               <div class="resume-item">
-                <h4 style="text-transform:capitalize ;"><a href="https://drive.google.com/file/d/1P3bj0GWgHPfAQk2altGkv6ZUVKlohl1T/view?usp=share_link">HTML Essential Training Certification by Great Linkedin.</a></h4>
+                <h4 style="text-transform:capitalize ;"><a href="https://drive.google.com/file/d/1WTlCD0ToH8BAg3jYLqiRnVhaAQvV1513/view?usp=drivesdk">HTML Essential Training Certification by Great Linkedin.</a></h4>
               </div>
               <div class="resume-item">
-                <h4 style="text-transform:capitalize ;"><a href="https://drive.google.com/file/d/1dKs96vqW5YcgOyFhOGAcgWcq0Oyvktmw/view?usp=share_link">Java Programming Certification by Great Learning.</a></h4>
+                <h4 style="text-transform:capitalize ;"><a href="https://drive.google.com/file/d/1WTlCD0ToH8BAg3jYLqiRnVhaAQvV1513/view?usp=drivesdk">Java Programming Certification by Great Learning.</a></h4>
               </div>
               <div class="resume-item">
-                <h4 style="text-transform:capitalize ;"><a href="https://drive.google.com/file/d/1zETIQhQWH28ddGd3L6wUFFt00jZo7TvE/view?usp=sharing">Javascript Certification by Sololearn</a></h4>
+                <h4 style="text-transform:capitalize ;"><a href="https://drive.google.com/file/d/1WTlCD0ToH8BAg3jYLqiRnVhaAQvV1513/view?usp=drivesdk">Javascript Certification by Sololearn</a></h4>
               </div>
           </div>
         </div>
