--- a/project-details2.html
+++ b/project-details2.html
@@ -40,11 +40,11 @@
         <img src="image/profile-img.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Saurabh Gawali</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/saurabh-gawali-2586961ba/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://www.facebook.com/" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/saurabhgawali___007/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://twitter.com/Saurabhg__007" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://github.com/saurabhg007" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.instagram.com/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://twitter." class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://" class="github"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
@@ -111,7 +111,7 @@
               <ul>
                 <li><strong>Project Name</strong>: Online Food Order</li>
                 <li><strong>Project Date</strong>: 10 April, 2022</li>
-                <li><strong>Project Url</strong>: <a href="https://github.com/saurabhg007/Online-Food-Order">www.github.com</a></li>
+                <li><strong>Project Url</strong>: <a href="https://github">www.github.com</a></li>
               </ul>
             </div>
             <div class="project-description">
@@ -136,7 +136,7 @@
         &copy; Copyright <strong><span>Project</span></strong>
       </div>
       <div class="credits">
-        Designed by <a href="#">Saurabh Gawali</a>
+        Designed by <a href="#">Jejeram Bandgar</a>
       </div>
     </div>
   </footer>
